<resources>
    <string name="app_name">ShopList</string>
    <string name="tab_current">Current</string>
    <string name="tab_archived">Archived</string>
    <string name="sho_acc_title">Your items</string>
    <string name="action_settings">Settings</string>
    <string name="new_item">New Item</string>
    <string name="label_name">Item name</string>
    <string name="creation_date">Creation date</string>
    <string name="valid_until_date">Valid until</string>
    <string name="comments">Comments</string>
    <string name="priority">Priority</string>
    <string name="what_buy">What do you want to buy?</string>
    <string name="any_info">Any additional information?</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="item_save">Shopping item saved!</string>
    <string name="item_del">Shopping item deleted!</string>
    <string name="move_arch">Item moved to archived!</string>
    <string name="item_sel">item selected</string>
    <string name="items_sel">items selected</string>
    <string name="error_empty">This field cannot be empty</string>
    <string name="no_res">No results</string>
    <string-array name="priorities">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
</resources>
