<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cordinator_single_item_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.shoplist.SingleItemActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <!-- ITEM TITLE SECTION -->
            <TextView
                android:id="@+id/label_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:alpha="0.9"
                android:text="@string/label_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:hint="@string/what_buy" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray" />


            <!-- ITEM CREATION DATE SECTION -->

            <TextView
                android:id="@+id/label_creat_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:alpha="0.9"
                android:text="@string/creation_date"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/text_creation_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:inputType="none"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray" />


            <!-- ITEM VALID DATE SECTION -->
            <TextView
                android:id="@+id/label_valid_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:alpha="0.9"
                android:text="@string/valid_until_date"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/text_valid_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray" />


            <!-- ITEM COMMENTS SECTION -->
            <TextView
                android:id="@+id/label_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:alpha="0.9"
                android:text="@string/comments"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_item_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="top|start"
                android:hint="@string/any_info"
                android:inputType="textMultiLine"
                android:lines="3"
                android:scrollbars="vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray" />


            <!-- ITEM PRIORITY SECTION -->
            <TextView
                android:id="@+id/priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:alpha="0.9"
                android:text="@string/priority"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/priority_spinner"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/priority_indicator"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0.7"
                    android:src="@drawable/priority_drawable_green" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
